Adding instructions for elastic and kibana via brew.